--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="stylesheets/features.css">
   <link rel="stylesheet" href="stylesheets/action.css">
   <link rel="stylesheet" href="stylesheets/header.css">
+  <link rel="stylesheet" href="stylesheets/contact.css">
 
   <script type="text/javascript" charset="utf-8" src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
   <script type="text/javascript" charset="utf-8" src="parallax.js-1.4.2/parallax.min.js"></script>
@@ -27,13 +28,13 @@
     <div class="header-nav">
       <ul>
         <li class="header-nav-item">
-          <a class="header-nav-link" href="#intro">О нас</a>
-        </li>
-        <li class="header-nav-item">
           <a class="header-nav-link" href="#features">Особенности</a>
         </li>
         <li class="header-nav-item">
           <a class="header-nav-link" href="#buy">Купить</a>
+        </li>
+        <li class="header-nav-item">
+          <a class="header-nav-link" href="#contacts">Контакты</a>
         </li>
       </ul>
     </div>
@@ -92,18 +93,32 @@
   <div class="container">
     <div class="column-1-2">
       <div class="action-image-div">
-        <img class="action-image" src="images/himalayan.png" alt="[Банка]" />
+        <img class="action-image" src="images/himalayan.png" alt="[Свинка]" />
       </div>
     </div>
     <div class="column-1-2">
       <div class="action-details">
         <p class="title-medium">Эта свинка ждет тебя</p>
         <div class="buffer-both">
-          <a class="button button-green" href="#">Заказать уже</a>
+          <a class="button button-green-big" href="#">Купить</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="contact text-center" id="contacts">
+  <div class="container">
+    <div class="column-1-2">
+      <p class="text-small">Наш адрес:</p>
+      <p class="title-small">Москва, Дмитровкое ш., 66</p>
+    </div>
+    <div class="column-1-2">
+      <p class="text-small">Телефон:</p>
+      <p class="title-small">+7(777)-777-7777</p>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
