--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   <div class="container">
     <div class="column-1-2">
       <p class="text-small">Наш адрес:</p>
-      <p class="title-small">Москва, Дмитровкое ш., 66</p>
+      <p class="title-small">Москва, Дмитровcкое ш., 66</p>
     </div>
     <div class="column-1-2">
       <p class="text-small">Телефон:</p>
